--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,6 +18,28 @@ body {
   /* Resize the background image to cover the entire container */
 }
 
+.homepage {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: contain;
+
+  .logo {
+    position: fixed;
+    top: 24px;
+    left: 24px;
+    right: 24px;
+
+    @media (max-width: 767px) {
+      text-align: center;
+    }
+  }
+}
+
 .full {
   width: 100%;
   height: 100%;
