Fix build source

--- a/src/components/molecules/AppTransfer/style.module.scss
+++ b/src/components/molecules/AppTransfer/style.module.scss
@@ -9,15 +9,14 @@
         padding: 4px;
         height: auto;
         border-radius: 6px;
-        background: $primary-01;
-        &:hover {
-          background-color: $primary-02 !important;
-          color: $white;
-        }
+        // &:hover {
+        //   background-color: $primary-02 !important;
+        //   color: $white;
+        // }
         &:disabled {
-          background: $white !important;
-          color: $neutral-03 !important;
-          border: 0.5px solid $neutral-03 !important;
+          // background: $white !important;
+          // color: $neutral-03 !important;
+          // border: 0.5px solid $neutral-03 !important;
         }
         .ant-btn-icon {
           display: none;
