--- a/src/styles/constants/_color.scss
+++ b/src/styles/constants/_color.scss
@@ -3,7 +3,7 @@ $white: #ffffff;
 $black: #181414;
 
 //primary
-$primary-01: #d1132a;
+// $primary-01: #d1132a;
 $primary-02: #e12b41;
 $primary-03: #f0808e;
 $primary-04: #f3b9c0;
