--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -62,8 +62,7 @@ body {
 }
 
 .shadow2 {
-  box-shadow:
-    0px 1px 1px 0px rgba(0, 0, 0, 0.25) inset,
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.25) inset,
     0px 1px 1px 0px rgba(0, 0, 0, 0.25);
 }
 
@@ -77,7 +76,7 @@ body {
 }
 
 .layout_box {
-  background-color: $white;
+  // background-color: $white;
   border-radius: 16px;
 }
 
