--- a/src/components/organism/Home/style.module.scss
+++ b/src/components/organism/Home/style.module.scss
@@ -7,6 +7,11 @@
   padding: 40px;
   border-radius: 24px;
   box-shadow: 0px 3px 10px 2px rgba(34, 33, 33, 0.2);
+
+  @media (max-width: 767px) {
+    padding: 20px;
+  }
+
   :global {
     .box_login .img {
       border-radius: 16px;
@@ -14,24 +19,6 @@
 
     button {
       width: 100%;
-    }
-
-    .radio-group {
-      label {
-        width: 100%;
-        margin: 0;
-        border: 1px solid transparent;
-
-        &.ant-radio-wrapper-checked {
-          border-color: #d1132a;
-          border-radius: 16px;
-        }
-
-        span {
-          width: 100%;
-          padding: 0;
-        }
-      }
     }
 
     .hotline {
@@ -63,6 +50,34 @@
 
     .ant-radio {
       display: none;
+    }
+  }
+}
+
+.profiles {
+  :global {
+    label {
+      width: 100%;
+      margin: 0;
+      border: 1px solid transparent;
+
+      &:not(:last-child) {
+        margin-bottom: 16px;
+      }
+
+      &.ant-radio-wrapper-checked,
+      &:hover {
+
+        .ant-row {
+          border-color: #d1132a;
+          border-radius: 16px;
+        }
+      }
+
+      span {
+        width: 100%;
+        padding: 0;
+      }
     }
   }
 }
